--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
-  "name": "task-01",
-  "version": "0.1.0",
+  "name": "react-boilerplate",
   "private": true,
+  "version": "1.1.0",
+  "description": "Used as a boilerplate for tasks in the 'React' course in Boom.dev",
+  "author": "Boom.dev",
   "dependencies": {
     "cross-env": "^7.0.3",
     "react": "^17.0.2",
